--- a/.gitignore
+++ b/.gitignore
@@ -46,6 +46,9 @@ captures/
 # Keystore files
 *.jks
 
+# API key files
+app/src/main/res/values/apiKey.xml
+
 # External native build folder generated in Android Studio 2.2 and later
 .externalNativeBuild
 
